Make IOData from String constructor